<resources>
    <string name="app_name">AndroidSummitSampleApp</string>

    <!-- API Menu Item Titles -->
    <string name="nessie_title">Nessie</string>
    <string name="cardio_title">Card.IO</string>
    <string name="firebase_messaging_title">Firebase Messaging</string>
    <string name="firebase_authui_title">Firebase Auth UI</string>
    <string name="firebase_database_title">Firebase Database</string>

    <!-- Nessie -->
    <string name="nessie_customers">Get Customers</string>
    <string name="nessie_deposit">Create Deposit</string>
    <string name="customer_first_name">"First Name: "</string>
    <string name="customer_last_name">"Last Name: "</string>
    <string name="nessie_customers_header">Retrieve a List of Customers</string>
    <string name="amount_hint">Enter Amount...</string>
    <string name="description_hint">Enter Description...</string>
    <string name="medium_hint">Enter Medium...</string>

    <string-array name="medium_spinner_options">
        <item>Select Medium...</item>
        <item>balance</item>
        <item>rewards</item>
    </string-array>

    <!-- Card.IO -->
    <string name="launch_cardio_scanner">Launch Scanner</string>

    <!-- Firebase Auth -->
    <string name="firebase_auth_sign_in">Sign In</string>
    <string name="firebase_auth_sign_out">Sign Out</string>
    <string name="signed_in_status">Signed in as:</string>
    <string name="signed_out_status">Signed out.</string>
    <string name="auth_placeholder">-----</string>

    <!-- Firebase Messaging -->
    <string name="messaging_setup_instructions"><![CDATA[
        <h3>
            To send Firebase Messaging notifications to this app:
        </h3>
        <p>
            1. Add this sample app to your account on <a href=\"http://firebase.google.com\">firebase.google.com</a>
        </p>
        <p>
            2. Generate google-services.json file and add it to this sample app.  Instructions on setup can be found
            <a href=\"https://firebase.google.com/docs/android/setup\">here</a>.
        </p>
        <p>
            3. Send a notification to the app using the Firebase console.  This app is already setup to handle background and foreground
            notifications. See ExampleMessagingService in this app for foreground notification handling.
        </p>
        <p>
            If you still cannot receive messages, make sure you have the latest Google Play Services and Google Repository SDKs.
        </p>]]>
    </string>

    <!-- Firebase Database -->
    <string name="first_name_hint">Enter First Name...</string>
    <string name="last_name_hint">Enter Last Name...</string>
    <string name="firebase_save_customer">Save Customer</string>

</resources>
