<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:id="@+id/input_first_name_edittext"
            android:hint="@string/first_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"/>

    <EditText
            android:id="@+id/input_last_name_edittext"
            android:hint="@string/last_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"/>

    <Button
            android:id="@+id/firebase_save_customer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/firebase_save_customer"/>

    <ListView
            android:id="@+id/firebase_customers_listview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="@dimen/default_margin"/>

</LinearLayout>