<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:id="@+id/input_amount_edittext"
            android:hint="@string/amount_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"/>

    <Spinner
            android:id="@+id/input_medium_spinner"
            android:entries="@array/medium_spinner_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"/>

    <EditText
            android:id="@+id/input_description_edittext"
            android:hint="@string/description_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"/>


    <Button
            android:id="@+id/nessie_create_deposit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/nessie_deposit"/>

    <TextView
            android:id="@+id/deposit_result_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/nessie_result_size"/>


</LinearLayout>